--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 </head>
 <body>
   <h1>Delete Your Modern People Account</h1>
-  <p><strong>App:</strong> Modern People<br/>
-     <strong>Developer:</strong> Modern People (<a href="mailto:adam@modernpeople.org">adam@modernpeople.org</a>)</p>
 
   <h2>How to request account deletion</h2>
   <h3>Option 1 (fastest): In-app deletion</h3>
@@ -25,7 +23,7 @@
   </ol>
 
   <h3>Option 2: Email request</h3>
-  <p>If you cannot access the app, email <a href="mailto:adam@modernpeople.org">adam@modernpeople.org</a> with:</p>
+  <p>If you cannot access the app, email <a href="mailto:team@modernpeople.com">team@modernpeople.com</a> with:</p>
   <ul>
     <li>Subject: <code>Delete my Modern People account</code></li>
     <li>The email address used for your account</li>
@@ -45,10 +43,10 @@
   </ul>
 
   <h2>What data may be kept (and for how long)</h2>
-  <p>Limited data may be retained only for security/fraud prevention, legal compliance, or backup recovery windows for up to <strong>[X days]</strong>, then deleted or anonymized.</p>
+  <p>Limited data may be retained only for security/fraud prevention, legal compliance, or backup recovery windows for up to 60 days, then deleted or anonymized.</p>
 
   <h2>Timing</h2>
-  <p>Email deletion requests are processed within <strong>[X business days]</strong> after identity verification. In-app deletion is processed when submitted.</p>
+  <p>Email deletion requests are processed within 10 business days after identity verification. In-app deletion is processed when submitted.</p>
 
   <h2>Contact</h2>
   <p><a href="mailto:team@modernpeople.com">team@modernpeople.com</a></p>
